Sec5_ASSN4-XXX: optimized AI-generated code